--- a/Homepage.html
+++ b/Homepage.html
@@ -5,11 +5,12 @@
         <title>Complaint Portal</title>
     </head>
     <div class="header"><h1>COMPLAINT PORTAL</h1></div>
-    User Name: <input type="text" name="name">
+    <div class="text">User Name: <input type="text" name="name">
     <br><br>
     E-mail  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : <input type="text" name="mail">
     <br><br>
-    Complaint&nbsp;:<object align="middle"><textarea rows = "5" cols = "60" name = "Complaint">
+    Complaint&nbsp;:<textarea rows = "5" cols = "60" name = "Complaint">
     Enter the complaints here...
     </textarea><br><br>
+</div>
 </html>
