--- a/Homepage.html
+++ b/Homepage.html
@@ -5,12 +5,13 @@
         <title>Complaint Portal</title>
     </head>
     <div class="header"><h1>COMPLAINT PORTAL</h1></div>
-    <div class="text">User Name: <input type="text" name="name">
+    <div class="column">User Name: <input type="text" name="name">
     <br><br>
     E-mail  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; : <input type="text" name="mail">
     <br><br>
     Complaint&nbsp;:<textarea rows = "5" cols = "60" name = "Complaint">
     Enter the complaints here...
     </textarea><br><br>
+    <input type="button" value="confirm" name="confirm">
 </div>
 </html>
